--- a/client/src/styles/Auth.css
+++ b/client/src/styles/Auth.css
@@ -1,5 +1,23 @@
+.title{
+  margin-top: 80px;
+  text-align: center;
+}
+
+.sub-icon{
+  width: 300%;
+  left: -123px;
+}
+
+.icon{
+  width: 85%;
+}
+
+.fa{
+  margin-top: 25px;
+}
+
 [type="date"] {
-  background:#fff url(https://cdn1.iconfinder.com/data/icons/cc_mono_icon_set/blacks/16x16/calendar_2.png)  97% 50% no-repeat ;
+  background:#fff url(https://i.imgur.com/x8bk47M.jpg)  97% 50% no-repeat ;
 }
 [type="date"]::-webkit-inner-spin-button {
   display: none;
@@ -13,7 +31,7 @@ input {
   background-color: #fff;
   padding: 3px 5px;
   box-shadow: inset 0 3px 6px rgba(0,0,0,0.1);
-  width: 190px;
+  width: 60%;
 }
 .loginBtn {
   box-sizing: border-box;
@@ -97,7 +115,7 @@ input {
   display: block;
 }
 body{
-  background-image: url("https://i.ytimg.com/vi/2yKsDZrEF7U/maxresdefault.jpg");
+  background-image: url("https://i.imgur.com/x8bk47M.jpg");
   background-size: cover;
 }
 .login-form {
@@ -154,7 +172,7 @@ body{
   color: #ed1c24;
 }
 .log-btn {
-  background: #00AEEF;
+  background: #db2e1d;
   dispaly: inline-block;
   width: 100%;
   font-size: 16px;
