--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,7 +31,7 @@
      padding: 0;
    }
    #cssmenu {
-     height: 37px;
+     height: 70px;
      display: block;
      border: 1px solid;
      border-radius: 5px;
@@ -74,9 +74,9 @@
      text-decoration: none;
      text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.4);
      font-weight: 700;
-     font-size: 13px;
-     font-family: Arial, Helvetica, sans-serif;
-     border-right: 1px solid #080808;
+     font-size: 17px;
+     font-family: "Ubuntu",Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
+     /* border-right: 1px solid #080808; */
      color: #ffffff;
      padding: 12px 20px;
    }
@@ -86,12 +86,12 @@
    #cssmenu > ul > li > a:after {
      content: "";
      position: absolute;
-     border-right: 1px solid;
+     /* border-right: 1px soylid; */
      top: -1px;
      bottom: -1px;
      right: -2px;
      z-index: 99;
-     border-color: #3c3c3c;
+     border-color: #da291d;
    }
    #cssmenu ul li.has-sub:hover > a:after {
      top: 0;
@@ -155,7 +155,7 @@
      outline: none;
      display: block;
      position: relative;
-     font: 10pt Arial, Helvetica, sans-serif;
+     font: 15pt "Ubuntu",Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
      color: #ffffff;
      text-decoration: none;
      text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
@@ -165,13 +165,13 @@
    #cssmenu,
    #cssmenu ul ul > li:hover > a,
    #cssmenu ul ul li a:hover {
-     background: #3c3c3c;
-     background: -moz-linear-gradient(top, #3c3c3c 0%, #222222 100%);
-     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #3c3c3c), color-stop(100%, #222222));
-     background: -webkit-linear-gradient(top, #3c3c3c 0%, #222222 100%);
-     background: -o-linear-gradient(top, #3c3c3c 0%, #222222 100%);
-     background: -ms-linear-gradient(top, #3c3c3c 0%, #222222 100%);
-     background: linear-gradient(top, #3c3c3c 0%, #222222 100%);
+     background: #da291d;
+     background: -moz-linear-gradient(top, #da291d 0%, #da291d 100%);
+     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #da291d), color-stop(100%, #da291d));
+     background: -webkit-linear-gradient(top, #da291d 0%, #da291d 100%);
+     background: -o-linear-gradient(top, #da291d 0%, #da291d 100%);
+     background: -ms-linear-gradient(top, #da291d 0%, #da291d 100%);
+     background: linear-gradient(top, #da291d 0%, #da291d 100%);
    }
    #cssmenu > ul > li > a:hover {
      background: #080808;
