--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,38 @@
+.img-circle{
+  padding: 0;
+  margin-top: 8px;
+  width: 35px;
+  height: 35px;
+}
+
+.navbar-nav{  
+  padding-top: 7px;
+  margin-left: 17px;
+  font-size: 18px;
+  font-family: "Ubuntu",Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-weight: bold;
+}
+
+span{
+  color: white;
+}
+
+.navbar-brand {
+  padding: 0px;
+}
+
+.navbar-brand>img {
+  height: 60px;
+  padding: 3px;
+  width: auto;
+}
+
+.navbar-inverse {
+  background-color: #da291d;
+  padding: 10px;
+  margin: 0;
+}
+
 .col-md-9{
   padding-right: 0;
 }
@@ -14,172 +49,9 @@
 }
 
 .leaflet-map-pane {
-      z-index: 2 !important;
-   }
+  z-index: 2 !important;
+}
 
-   .leaflet-google-layer {
-       z-index: 1 !important;
-   }
-
-   #cssmenu,
-   #cssmenu ul,
-   #cssmenu li,
-   #cssmenu a {
-     border: none;
-     line-height: 1;
-     margin: 0;
-     padding: 0;
-   }
-   #cssmenu {
-     height: 70px;
-     display: block;
-     border: 1px solid;
-     border-radius: 5px;
-     width: auto;
-     border-color: #080808;
-     margin: 0;
-     padding: 0;
-   }
-   #cssmenu > ul {
-     list-style: inside none;
-     margin: 0;
-     padding: 0;
-   }
-   #cssmenu > ul > li {
-     list-style: inside none;
-     float: left;
-     display: inline-block;
-     position: relative;
-     margin: 0;
-     padding: 0;
-   }
-   #cssmenu.align-center > ul {
-     text-align: center;
-   }
-   #cssmenu.align-center > ul > li {
-     float: none;
-     margin-left: -3px;
-   }
-   #cssmenu.align-center ul ul {
-     text-align: left;
-   }
-   #cssmenu.align-center > ul > li:first-child > a {
-     border-radius: 0;
-   }
-   #cssmenu > ul > li > a {
-     outline: none;
-     display: block;
-     position: relative;
-     text-align: center;
-     text-decoration: none;
-     text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.4);
-     font-weight: 700;
-     font-size: 17px;
-     font-family: "Ubuntu",Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
-     /* border-right: 1px solid #080808; */
-     color: #ffffff;
-     padding: 12px 20px;
-   }
-   #cssmenu > ul > li:first-child > a {
-     border-radius: 5px 0 0 5px;
-   }
-   #cssmenu > ul > li > a:after {
-     content: "";
-     position: absolute;
-     /* border-right: 1px soylid; */
-     top: -1px;
-     bottom: -1px;
-     right: -2px;
-     z-index: 99;
-     border-color: #da291d;
-   }
-   #cssmenu ul li.has-sub:hover > a:after {
-     top: 0;
-     bottom: 0;
-   }
-   #cssmenu > ul > li.has-sub > a:before {
-     content: "";
-     position: absolute;
-     top: 18px;
-     right: 6px;
-     border: 5px solid transparent;
-     border-top: 5px solid #ffffff;
-   }
-   #cssmenu > ul > li.has-sub:hover > a:before {
-     top: 19px;
-   }
-   #cssmenu > ul > li.has-sub:hover > a {
-     padding-bottom: 14px;
-     z-index: 999;
-     border-color: #3f3f3f;
-   }
-   #cssmenu ul li.has-sub:hover > ul,
-   #cssmenu ul li.has-sub:hover > div {
-     display: block;
-   }
-   #cssmenu > ul > li.has-sub > a:hover,
-   #cssmenu > ul > li.has-sub:hover > a {
-     background: #3f3f3f;
-     border-color: #3f3f3f;
-   }
-   #cssmenu ul li > ul,
-   #cssmenu ul li > div {
-     display: none;
-     width: auto;
-     position: absolute;
-     top: 38px;
-     background: #3f3f3f;
-     border-radius: 0 0 5px 5px;
-     z-index: 999;
-     padding: 10px 0;
-   }
-   #cssmenu ul li > ul {
-     width: 200px;
-   }
-   #cssmenu ul ul ul {
-     position: absolute;
-   }
-   #cssmenu ul ul li:hover > ul {
-     left: 100%;
-     top: -10px;
-     border-radius: 5px;
-   }
-   #cssmenu ul li > ul li {
-     display: block;
-     list-style: inside none;
-     position: relative;
-     margin: 0;
-     padding: 0;
-   }
-   #cssmenu ul li > ul li a {
-     outline: none;
-     display: block;
-     position: relative;
-     font: 15pt "Ubuntu",Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
-     color: #ffffff;
-     text-decoration: none;
-     text-shadow: 1px 1px 0 rgba(0, 0, 0, 0.5);
-     margin: 0;
-     padding: 8px 20px;
-   }
-   #cssmenu,
-   #cssmenu ul ul > li:hover > a,
-   #cssmenu ul ul li a:hover {
-     background: #da291d;
-     background: -moz-linear-gradient(top, #da291d 0%, #da291d 100%);
-     background: -webkit-gradient(linear, left top, left bottom, color-stop(0%, #da291d), color-stop(100%, #da291d));
-     background: -webkit-linear-gradient(top, #da291d 0%, #da291d 100%);
-     background: -o-linear-gradient(top, #da291d 0%, #da291d 100%);
-     background: -ms-linear-gradient(top, #da291d 0%, #da291d 100%);
-     background: linear-gradient(top, #da291d 0%, #da291d 100%);
-   }
-   #cssmenu > ul > li > a:hover {
-     background: #080808;
-     color: #ffffff;
-   }
-   #cssmenu ul ul a:hover {
-     color: #ffffff;
-   }
-   #cssmenu > ul > li.has-sub > a:hover:before {
-     border-top: 5px solid #ffffff;
-   }
+.leaflet-google-layer {
+  z-index: 1 !important;
+}
