--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,6 +5,13 @@
   height: 35px;
 }
 
+.img-rounded{
+  padding: 0;
+  margin: 0;
+  width: 25px;
+  height: 25px;
+}
+
 .navbar-nav{  
   padding-top: 7px;
   margin-left: 17px;
@@ -14,6 +21,10 @@
 }
 
 span{
+  color: white;
+}
+
+.dropdown-toggle{
   color: white;
 }
 
