--- a/client/src/App.css
+++ b/client/src/App.css
@@ -5,16 +5,28 @@
   height: 35px;
 }
 
+.tooltip-detail{
+  padding: auto;
+  margin: auto;
+  text-align: center;
+  display: block;
+}
+
+.leader{
+  color:red;
+  text-align: center;
+  padding: auto;
+  margin: auto;
+  text-align: center;
+  display: block;
+}
+
 .navbar-nav{  
   padding-top: 7px;
   margin-left: 17px;
   font-size: 18px;
   font-family: "Ubuntu",Tahoma,"Helvetica Neue",Helvetica,Arial,sans-serif;
   font-weight: bold;
-}
-
-span{
-  color: white;
 }
 
 .navbar-brand {
