update achievement and conflict css

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,3 +1,19 @@
+.navtext{
+  color: white;
+}
+
+/* .dropdown{
+  color: white;
+  text-decoration-color: white;
+} */
+
+/* .dropdown-menu > li > a:hover,
+.dropdown-menu > li > a:focus {
+ color: white;
+ text-decoration: none;
+ background-color: white;
+} */
+
 .img-circle{
   padding: 0;
   margin-top: 8px;
@@ -5,7 +21,13 @@
   height: 35px;
 }
 
-<<<<<<< HEAD
+.img-rounded{
+  padding: 0;
+  margin-top: 0;
+  width: 20px;
+  height: 20px;
+}
+
 .tooltip-detail{
   padding: auto;
   margin: auto;
@@ -20,13 +42,6 @@
   margin: auto;
   text-align: center;
   display: block;
-=======
-.img-rounded{
-  padding: 0;
-  margin: 0;
-  width: 25px;
-  height: 25px;
->>>>>>> fb0ec6a79f8703fb33129f8968ba47cc8c168f27
 }
 
 .navbar-nav{  
@@ -37,17 +52,6 @@
   font-weight: bold;
 }
 
-<<<<<<< HEAD
-=======
-span{
-  color: white;
-}
-
-.dropdown-toggle{
-  color: white;
-}
-
->>>>>>> fb0ec6a79f8703fb33129f8968ba47cc8c168f27
 .navbar-brand {
   padding: 0px;
 }
@@ -66,6 +70,7 @@ span{
 
 .col-md-9{
   padding-right: 0;
+  margin: auto;
 }
 
 .col-md-3{
