--- a/client/src/App.css
+++ b/client/src/App.css
@@ -2,6 +2,21 @@
   color: white;
 }
 
+.rewards{
+  margin-top: 20px;
+  width: 100%;
+}
+
+.dropdown-menu{
+  width: 500px;
+}
+
+.dropdown-menu ul li a{
+  text-align: center;
+  font-weight: bold;
+}
+
+
 .game-modal{
   width: 100%;
 }
