--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,6 +38,10 @@
   height: 20px;
 }
 
+.komsel{
+  width: 150px;
+}
+
 .tooltip-detail{
   padding: auto;
   margin: auto;
@@ -54,7 +58,7 @@
   display: block;
 }
 
-.navbar-nav{  
+.navbar-nav{
   padding-top: 7px;
   margin-left: 17px;
   font-size: 18px;
@@ -91,7 +95,7 @@
 }
 
 .leaflet-container{
-  height: 790px;
+  height: 1090px;
   width: 100%;
 }
 
